--- a/src/style.css
+++ b/src/style.css
@@ -77,3 +77,12 @@ button {
   border: none;
   font-size: 20px;
 }
+
+.draggable.dragging {
+  opacity: 0.1;
+  background-color: #7f8081;
+}
+
+.drag-btn {
+  cursor: move;
+}
